Revisió i correccions curs 26-27
- README: salt de línia final en lloc de línia en blanc
- README: exemples d'execució amb arguments
- README: condicions de lliurament completes
- PR113append: comentari del mètode
- PR113sobreescriu: comentari del mètode
- PR111Files: el paràmetre és un directori (camiDirectori)
- PR113FilesTest: missatges d'asserció coherents amb l'enunciat
- PR115cpTest: substituït el test duplicat per un test d'origen sense salt final
- run.sh accepta arguments del programa
- run.ps1 accepta arguments del programa